Correction du contraste du footer + réduction de la taille des GIFs

--- a/public_html/style.css
+++ b/public_html/style.css
@@ -12,9 +12,7 @@ header img {
 
 /* -- Footer -- */
 
-footer {
-    background-color: #009ddc;
-}
+
 
 /* -- Main -- */
 
